# allowance

./: AGENTS.md  README.md  __init__.py  cli.py  index.html  pyproject.toml
#/: pyvenv.cfg
X/: pyvenv.cfg
allowance/: __init__.py  __main__.py  models.py  planner.py  storage.py
allowance-1/: README.md
allowance-1/allowance/: app.py  cli.py
allowance-1/allowance/services/: datastore.py  finance.py
allowance-1/allowance/ui/: main_window.py
allowance-1/allowance/ui/components/: balance_view.py  transaction_form.py
allowance-1/tests/: test_cli.py  test_ui.py
allowance.egg-info/: PKG-INFO 2  SOURCES.txt  entry_points 2.txt  top_level 2.txt
allowance/web/: index.html  styles.css
docs/: index.html  styles.css
tests/: test_planner.py  test_web_ui.py
괄호/: pyvenv.cfg
없음/: pyvenv.cfg
