[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allowance"
version = "0.1.0"
description = "Allowance CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["allowance"]

[project.scripts]
allowance = "allowance.cli:main"
